--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,8 @@
   <%= devise_error_messages! %>
 
   <div><%= f.label :name %><br />
-  <%= f.text_field :name%></div>
+  <%= f.text_field :name %></div>
+
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
@@ -14,9 +15,12 @@
   <div><%= f.label :password_confirmation %><br />
   <%= f.password_field :password_confirmation %></div>
 
-
   <div><%= f.label :personal_number %><br />
   <%= f.text_field :personal_number %></div>
+
+  <div><%= f.label :type %><br />
+  <%= f.select :type, [['Home Owner', HomeOwner],['Normal User', User]] %></div>
+
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 
