Saravanan | Added twitter bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Sweethome</title>
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <%= yield %>
-
-</body>
-</html>
+  <head>
+    <title>Sweethome</title>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= stylesheet_link_tag    "bootstrap.min.css", :media => "all" %>
+    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "bootstrap.min.js" %>
+    <%= csrf_meta_tags %>
+  </head>
+  <body>
+    <div class="navbar navbar-fixed-top">
+      <div class="navbar-inner">
+      <ul class="nav">
+        <li class="active offset3"><a href="#">Home</li>
+        </ul>
+      </div>
+      </div>
+      <div class="row-fluid">
+        <div class="span12">
+          <p class="notice"><%= notice %></p>
+          <p class="alert"><%= alert %></p>
+          <%= yield %>
+          <%= yield :javascript %>
+          <%= yield :css %>
+        </div>
+      </div>
+    </body>
+  </html>
